--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "git@github.com:AgneseLee/banana.git",
   "author": "agnsesli <agneselee@163.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "babel-plugin-lodash": "^3.3.4",
+    "lodash-webpack-plugin": "^0.11.5"
+  },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.2.1",
