--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
-    "lodash-webpack-plugin": "^0.11.5"
+    "lodash-webpack-plugin": "^0.11.5",
+    "normalizr": "^3.3.0"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.4.2",
